--- a/projects.html
+++ b/projects.html
@@ -26,13 +26,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="blog-home.html">Stephan Liu</a>
+          <a class="navbar-brand" href="index.html">Stephan Liu</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="about-me.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -45,6 +45,21 @@
       
         <div class="col-lg-12">
           <h1 class="page-header">My Projects <small>Various Shenanigans and Escapades in my Programming Experience</small></h1>
+        </div>
+
+      </div>
+
+      <div class="row">
+        
+        <div class="col-lg-7 col-md-7">
+          <a href="#"><img class="img-responsive" src="img/dropbox.jpg"></a>
+        </div>
+
+        <div class="col-lg-5 col-md-5">
+          <h3>Cachebox</h3>
+          <h4>Thought-free backup.</h4>
+          <p>This project was a result of hours of coding at the 2013 Launch Hackthon in Downtown San Francisco. One of my team members, Shaun Singh, noticed all the free space most users had on Dropbox, and thought that the space could be better used. From that idea, Cachebox was born. This application creates a cache folder in a user's Dropbox, and automatically uses uploads a user's Most Recent Files from My Documents into this cache. On the rare ocassion that the user runs out of space, the cache will automatically remove the oldest files from the cache to generate free space. This was made with Shaun Singh, Kunal Roy, and Eric Wu. The application was written in Python, and utilized the Dropbox API. </p>
+          <a class="btn btn-primary" href="https://github.com/guardianxero/LaunchHack/">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
 
       </div>
@@ -85,7 +100,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Stephan Liu 2013 &middot; <a href="https://facebook.com/guardianxero">Facebook</a> &middot; <a href="http://www.linkedin.com/pub/stephan-liu/72/884/b7">LinkedIn</a> &middot; <a href="https://twitter.com/guardianxero222">Twitter</p>
+            <p>Copyright &copy; Stephan Liu 2013 &middot; (720) 883-5153 &middot; <a href="mailto:stephan.x.liu@gmail.com">stephan.x.liu@gmail.com</a> &middot; <a href="https://facebook.com/guardianxero">Facebook</a> &middot; <a href="http://www.linkedin.com/pub/stephan-liu/72/884/b7">LinkedIn</p>
           </div>
         </div>
       </footer>
